1. Added authentication for local web services. 2. Rolled back Boyd's changes to Simias.asmx.cs because they broke the web service.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@4285 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/Common/simias-client-bootstrap.config.in
+++ b/simias/src/Common/simias-client-bootstrap.config.in
@@ -3,6 +3,7 @@
       <setting name="WebServicePath" value="@_webdir_@" />
       <setting name="Services">
       <Service name="Simias Enterprise Domain Provider" assembly="Simias" enabled="True" type="Thread" class="Simias.EnterpriseProvider" />
+      <Service name="Simias Local Domain Provider" assembly="Simias" enabled="True" type="Thread" class="Simias.LocalProvider" />
       <Service name="Simias Domain Watcher" assembly="Simias" enabled="True" type="Thread" class="Simias.DomainWatcher.Service" />
       <Service name="Simias Change Log Service" assembly="Simias" enabled="True" type="Thread" class="Simias.Storage.ChangeLog" />
       <Service name="Simias Interprocess Event Service" assembly="Simias" enabled="True" type="Thread" class="Simias.Event.IProcEventServer" />
