--- a/simias/package/darwin/Info.plist
+++ b/simias/package/darwin/Info.plist
@@ -44,13 +44,15 @@
 	<array>
 		<dict>
 			<key>SpecType</key>
-			<string>file</string>
+			<string>bundle</string>
 			<key>SpecArgument</key>
-			<string>/Library/Frameworks/Mono.framework/Versions/1.1.5/bin/mono</string>
+			<string>/Library/Frameworks/Mono.framework</string>
+			<key>SpecProperty</key>
+			<string>CFBundleVersion</string>
 			<key>TestOperator</key>
-			<string>eq</string>
+			<string>&gt;=</string>
 			<key>TestObject</key>
-			<string>/Library/Frameworks/Mono.framework/Versions/1.1.4/bin/mono</string>
+			<string>1.1.6</string>
 			<key>Level</key>
 			<string>requires</string>
 			<key>TitleKey</key>
