Allow install-util/uninstall-util targets from top level make.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@4291 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/Makefile.am
+++ b/ifolder/Makefile.am
@@ -42,6 +42,11 @@ if DEBUG
 endif
 endif
 
+install-util uninstall-util:
+if WINDOWS
+	$(MAKE) -C src $@
+endif
+
 register unregister:
 if WINDOWS
 	$(MAKE) -C src $@
