1. Fixed unathenticated service Ping to be PingSimias. 2. Fixed bug in web.config on SimpleServer on mono. 3. Changed SimiasServer to use SimiasPing instead of WSDL call.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@4292 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/SimiasServer/Makefile.am
+++ b/simias/src/SimiasServer/Makefile.am
@@ -6,7 +6,7 @@ SimiasServer_CSFILES_CSC := $(subst /,$(SEP),$(SimiasServer_CSFILES))
 SimiasServer_INCLUDES =
 SimiasServer_RESOURCES = $(srcdir)/App$(ICON_EXT)
 SimiasServer_FLAGS = $(CSC_EXEFLAG)
-SimiasServer_LIBS = System.dll System.Data.dll $(SYSTEM_XML) SimiasClient.dll
+SimiasServer_LIBS = System.dll System.Data.dll $(SYSTEM_XML) System.Web.Services.dll SimiasClient.dll
 SimiasServer_LIBPATH = ../SimiasClient
 
 PROJECT_FILES = $(srcdir)/SimiasServer.csproj
