reset the logging after flaim lock is made
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@4314 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/WebService/SimiasWebService.csproj
+++ b/simias/src/WebService/SimiasWebService.csproj
@@ -119,6 +119,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "Global.asax.resx"
+                    DependentUpon = "Global.asax.cs"
+                    BuildAction = "EmbeddedResource"
+                />
+                <File
                     RelPath = "Simias.asmx"
                     BuildAction = "Content"
                 />
