--- a/src/WebService/SimiasWebService.csproj
+++ b/src/WebService/SimiasWebService.csproj
@@ -119,6 +119,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "Global.asax.resx"
+                    DependentUpon = "Global.asax.cs"
+                    BuildAction = "EmbeddedResource"
+                />
+                <File
                     RelPath = "Simias.asmx"
                     BuildAction = "Content"
                 />
