ignorring errors in linux for build purposes
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@4321 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/SimiasClient/Makefile.am
+++ b/simias/src/SimiasClient/Makefile.am
@@ -30,7 +30,7 @@ if WINDOWS
 	wsdl /out:SimiasService.cs $(srcdir)/../WebService/Simias.wsdl
 endif
 if LINUX
-	wsdl -nologo -out:SimiasService.cs $(srcdir)/../WebService/Simias.wsdl
+	-wsdl -nologo -out:SimiasService.cs $(srcdir)/../WebService/Simias.wsdl
 endif
 if DARWIN
 	wsdl -nologo -out:SimiasService.cs $(srcdir)/../WebService/Simias.wsdl
