1. Updated icons (bug 73450). 2. Modified sync animation to change direction according to the direction of the sync.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@4332 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/src/FormsTrayApp/FormsTrayApp.csproj
+++ b/ifolder/src/FormsTrayApp/FormsTrayApp.csproj
@@ -7,7 +7,7 @@
     >
         <Build>
             <Settings
-                ApplicationIcon = "App.ico"
+                ApplicationIcon = "ifolder_app.ico"
                 AssemblyKeyContainerName = ""
                 AssemblyName = "iFolderApp"
                 AssemblyOriginatorKeyFile = ""
@@ -154,10 +154,6 @@
                     BuildAction = "EmbeddedResource"
                 />
                 <File
-                    RelPath = "App.ico"
-                    BuildAction = "Content"
-                />
-                <File
                     RelPath = "AssemblyInfo.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
@@ -211,6 +207,10 @@
                     RelPath = "GlobalProperties.resx"
                     DependentUpon = "GlobalProperties.cs"
                     BuildAction = "EmbeddedResource"
+                />
+                <File
+                    RelPath = "ifolder_app.ico"
+                    BuildAction = "Content"
                 />
                 <File
                     RelPath = "iFolderAppInstallerClass.cs"
