1. Enabled local authentication.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@4340 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/WebService/win.web.config
+++ b/simias/src/WebService/win.web.config
@@ -46,7 +46,7 @@
 
     <appSettings>
 		<add key="MonoServerDefaultIndexFiles" value="index.aspx, Default.aspx, default.aspx, index.html, index.htm" />
-		<add key="SimiasAuthNotRequired" value="Simias.asmx, iFolder.asmx, Login.ashx, PingSimias:Simias.Web.SimiasService:Simias.Web, Invite:Simias.POBoxService.Web.POBoxService:Simias.POBox.Web" />
+		<add key="SimiasAuthNotRequired" value="Login.ashx, PingSimias:Simias.Web.SimiasService:Simias.Web, Invite:Simias.POBoxService.Web.POBoxService:Simias.POBox.Web" />
 		<add key="SimiasRequireSSL" value="no" />
     </appSettings>
 	
