This fixes bug #CALVIN_FORGOT_THINGS_ON_HIS_PREVIOUS_CHECKIN
1. Didn't add simiasweb.h in the makefile to be installed so it couldn't be used
2. Didn't include simias.h in simiasweb.h so the other functions were undefined


git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@4346 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/libsimias/Makefile.am
+++ b/simias/src/libsimias/Makefile.am
@@ -40,6 +40,7 @@ install-exec-local:
 	$(INSTALL_PROGRAM) stdsoap2.h $(DESTDIR)$(includedir)/simias
 	$(INSTALL_PROGRAM) simiasH.h $(DESTDIR)$(includedir)/simias
 	$(INSTALL_PROGRAM) simias.h $(DESTDIR)$(includedir)/simias
+	$(INSTALL_PROGRAM) simiasweb.h $(DESTDIR)$(includedir)/simias
 
 uninstall-local:
 	rm -f $(DESTDIR)$(includedir)/simias/simiasStub.h
@@ -47,6 +48,7 @@ uninstall-local:
 	rm -f $(DESTDIR)$(includedir)/simias/stdsoap2.h
 	rm -f $(DESTDIR)$(includedir)/simias/simiasH.h
 	rm -f $(DESTDIR)$(includedir)/simias/simias.h
+	rm -f $(DESTDIR)$(includedir)/simias/simiasweb.h
 
 clean-local:
 	rm -f stdsoap2.* *.xml simias.nsmap simiasC* simiasH* simiasS* env* soap*
