fixed bug in make where it was trying to copy the old Simias.mDns.dll on install
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@4356 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simdezvous/src/Simdezvous/Makefile.am
+++ b/simdezvous/src/Simdezvous/Makefile.am
@@ -32,7 +32,7 @@ if WINDOWS
 OTHER_FILES = ../libsimdezvous/libsimdezvous.dll
 endif
 
-install-exec-local: Simias.mDns.dll $(DATA_FILES)
+install-exec-local: Simdezvous.dll $(DATA_FILES)
 	$(mkinstalldirs) $(DESTDIR)$(webdir)
 	$(mkinstalldirs) $(DESTDIR)$(webbindir)
 	$(INSTALL_PROGRAM) Simdezvous.dll $(OTHER_FILES) $(DEBUG_FILES) $(DESTDIR)$(webbindir)
