--- a/ifolder/package/linux/ifolder.spec.in
+++ b/ifolder/package/linux/ifolder.spec.in
@@ -22,7 +22,7 @@
 #######################################################################
 
 %define prefix /opt/novell/ifolder3
-%define MONO_MACHINECONF /etc/mono/machine.config
+%define MONO_MACHINECONF /etc/mono/1.0/machine.config
 
 Summary      : iFolder 3
 Name         : @PACKAGE@
@@ -135,7 +135,7 @@ if [ "$INSTANCES_AFTER_INSTALL" = "1" ]; then
                 cat %{MONO_MACHINECONF}.backup | sed "s/maxconnection=\"2\"/maxconnection=\"10\" /" > %{MONO_MACHINECONF}
                 rm -f %{MONO_MACHINECONF}.backup
         else
-                echo "%{MONO_MACHINECONF} not writable"
+                echo "WARNING: %{MONO_MACHINECONF} not writable"
                                                                                                                                              
         fi
     fi
