Add recursive flag to chmod for defect 74635
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@4438 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/package/linux/ifolder.spec.in
+++ b/ifolder/package/linux/ifolder.spec.in
@@ -76,11 +76,11 @@ if [ "$INSTANCES_AFTER_INSTALL" = "1" ]; then
 
 # These two fixes are for defect 74635 as a workaround to a mono defect 71219
     if [ -d /etc/mono ]; then
-	chmod 755 /etc/mono
+	chmod -R 755 /etc/mono
     fi
 
     if [ -d /usr/lib/mono ]; then
-	chmod 755 /usr/lib/mono
+	chmod -R 755 /usr/lib/mono
     fi
 
 
