--- a/other/SimpleServer/SimpleServer.csproj
+++ b/other/SimpleServer/SimpleServer.csproj
@@ -89,6 +89,11 @@
                     AssemblyName = "Simias"
                     HintPath = "..\..\stage\web\bin\Simias.dll"
                 />
+                <Reference
+                    Name = "SimiasClient"
+                    AssemblyName = "SimiasClient"
+                    HintPath = "..\..\..\..\final\web\bin\SimiasClient.dll"
+                />
             </References>
         </Build>
         <Files>
