https://bugzilla.novell.com/show_bug.cgi?id=73332 Added a status to the FileSyncEventArgs to allow for better status reporting.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@4461 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/SimiasClient/SimiasClient.csproj
+++ b/simias/src/SimiasClient/SimiasClient.csproj
@@ -234,6 +234,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "SyncStatus.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "WSInspection.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
