--- a/src/SimiasClient/SimiasClient.csproj
+++ b/src/SimiasClient/SimiasClient.csproj
@@ -234,6 +234,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "SyncStatus.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "WSInspection.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
