1. Fixed bug #78704. The owner of a domain cannot be changed nor can a collection owners rights be downgraded from admin rights. Further checks were added to ensure that a collection had at least one and only one owner. 2. Updated tests to test for conditions stated in #1.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@4470 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/test/CollectionStore/CollectionStoreTests.csproj
+++ b/simias/test/CollectionStore/CollectionStoreTests.csproj
@@ -109,6 +109,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "CollectionOwnerTests.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "CollectionStoreTests.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
