1. Updated project file from fix for Bug 79231. 2. Fixed null reference exception (fix for Bug 80259).
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@4481 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/src/FormsTrayApp/FormsTrayApp.csproj
+++ b/ifolder/src/FormsTrayApp/FormsTrayApp.csproj
@@ -238,6 +238,16 @@
                     BuildAction = "EmbeddedResource"
                 />
                 <File
+                    RelPath = "RemoveAccount.cs"
+                    SubType = "Form"
+                    BuildAction = "Compile"
+                />
+                <File
+                    RelPath = "RemoveAccount.resx"
+                    DependentUpon = "RemoveAccount.cs"
+                    BuildAction = "EmbeddedResource"
+                />
+                <File
                     RelPath = "Security.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
