1. Fixed bug #80373. A new web method has been added to the Simias web service: public bool SetDomainHostAddress( string domainID, string hostAddress ). The hostAddress is just the IP DNS host name or IP dotted address. If the port has changed, it may be specified by appending a ':' + port to the host address.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@4499 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/test/CollectionStore/CollectionStoreTests.csproj
+++ b/simias/test/CollectionStore/CollectionStoreTests.csproj
@@ -123,6 +123,11 @@
                     SubType = "Code"
                     BuildAction = "Compile"
                 />
+                <File
+                    RelPath = "SetDomainServerAddressTests.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
             </Include>
         </Files>
     </CSHARP>
