--- a/test/CollectionStore/CollectionStoreTests.csproj
+++ b/test/CollectionStore/CollectionStoreTests.csproj
@@ -123,6 +123,11 @@
                     SubType = "Code"
                     BuildAction = "Compile"
                 />
+                <File
+                    RelPath = "SetDomainServerAddressTests.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
             </Include>
         </Files>
     </CSHARP>
