Bug 81104 - If simias becomes unresponsive, Mac client starts showing old dialog screens
I now check for a null string and also clean up the dialog when closing it


git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@4544 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/configure.in
+++ b/ifolder/configure.in
@@ -158,7 +158,7 @@ case $IFOLDER_OS in
         EXE_EXT=''
         ICON_EXT='.ico'
         ICON_FLAG='/resource:'
-        INSTALL_EXE_OPTS='--mode=644'
+        INSTALL_EXE_OPTS='-m 644'
         NUNIT="mono nunit-console.exe"
         NUNIT_LIBPATH="$TOOLDIR/NUnit/mono/bin"
         NUNIT_FLAGS='/nologo'
