Bug 81104 - If simias becomes unresponsive, Mac client starts showing old dialog screens
This changed was checked in to fix the iFolder project, I figured I better do it here.  The mode flags were wrong


git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk/simias@4545 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/configure.in
+++ b/configure.in
@@ -142,7 +142,7 @@ case $SIMIAS_OS in
         EXE_EXT=''
         ICON_EXT='.ico'
         ICON_FLAG='/resource:'
-        INSTALL_EXE_OPTS='--mode=644'
+        INSTALL_EXE_OPTS='-m 644'
         LOG4NET_DIR="$EXTERNAL_DIR/log4net/bin/mono/1.0/release"
         NOVELL_SECURITY_DIR="$EXTERNAL_DIR/Novell.Security/mono/bin"
         NUNIT="mono nunit-console.exe"
