Bug 81746 - about dialogue shows version .9
The version is now set at configure time


git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@4548 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/configure.in
+++ b/ifolder/configure.in
@@ -500,6 +500,7 @@ src/TrayIcon/libtrayicon/Makefile
 src/WebService/Makefile
 src/libifolder/Makefile
 src/OSXClient/Makefile
+src/OSXClient/Info.plist
 src/OSXClient/src/config.h
 test/Makefile
 test/iFolder/Makefile
