--- a/ifolder/src/OSXClient/Info.plist.in
+++ b/ifolder/src/OSXClient/Info.plist.in
@@ -17,7 +17,7 @@
 	<key>CFBundleSignature</key>
 	<string>NOVL</string>
 	<key>CFBundleVersion</key>
-	<string>.9</string>
+	<string>@VERSION@</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
