1. Fixed store browser to be able to remotely browse servers. 2. Enabled https support. 3. Cache credentials for recent stores.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@4558 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/tools/FormsStoreBrowser/FormsStoreBrowser.csproj
+++ b/simias/tools/FormsStoreBrowser/FormsStoreBrowser.csproj
@@ -118,6 +118,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "CertPolicy.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "Form1.cs"
                     SubType = "Form"
                     BuildAction = "Compile"
