--- a/tools/FormsStoreBrowser/FormsStoreBrowser.csproj
+++ b/tools/FormsStoreBrowser/FormsStoreBrowser.csproj
@@ -118,6 +118,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "CertPolicy.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "Form1.cs"
                     SubType = "Form"
                     BuildAction = "Compile"
