--- a/simias/test/CollectionStore/CollectionStoreTests.csproj
+++ b/simias/test/CollectionStore/CollectionStoreTests.csproj
@@ -109,6 +109,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "CollectionLockTests.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "CollectionOwnerTests.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
