Fix for Bug 83183 - Remove non-english language files and resources.
I removed the "po" directory from even being compiled for FCS.


git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@4580 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/nautilus-ifolder/Makefile.am
+++ b/nautilus-ifolder/Makefile.am
@@ -1,6 +1,8 @@
 @INTLTOOL_DESKTOP_RULE@
 
-SUBDIRS = src po
+SUBDIRS = src
+# bht: Removed the po subdirectory from being built for FCS
+# po
 
 DIST_SUBDIRS = $(SUBDIRS) package
 
