Fix for Bug 83183 - Remove non-english language files and resources.
I commented-out the "po" directory from even being compiled for FCS.


git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@4584 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/configure.in
+++ b/ifolder/configure.in
@@ -491,8 +491,8 @@ src/iFolder/Makefile
 src/LinuxClient/Makefile
 src/LinuxClient/library/Makefile
 src/LinuxClient/application/Makefile
-src/LinuxClient/po/Makefile
-src/LinuxClient/po/POTFILES
+# src/LinuxClient/po/Makefile
+# src/LinuxClient/po/POTFILES
 src/FormsTrayApp/Makefile
 src/iFolderShell/Makefile
 src/TrayIcon/Makefile
