defect 75485--needed to change the path to include the share folder
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@4588 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/package/linux/ifolder.spec.in
+++ b/ifolder/package/linux/ifolder.spec.in
@@ -204,9 +204,9 @@ if [ "$INSTANCES_AFTER_UNINSTALL" = "0" ]; then
         echo "Removing simias information for all users"
         if [ -e /root/.local/simias ]
         then
-                rm -rf /root/.local/simias
+                rm -rf /root/.local/share/simias
         fi
-        rm -rf /home/${*}/.local/simias
+        rm -rf /home/${*}/.local/share/simias
                                                                                                                                   
     #
     # Remove ifolder.sh from /etc/profile.d
