--- a/ifolder/configure.in
+++ b/ifolder/configure.in
@@ -3,7 +3,8 @@ AC_CANONICAL_SYSTEM
 AM_CONFIG_HEADER(config.h)
 
 AM_INIT_AUTOMAKE(ifolder3, 3.0)
-VERSION=$VERSION.`date +%Y%m%d`
+# ASSEMBLY_INFO_VERSION=$VERSION.`date +%Y.%m%d`
+# VERSION=$VERSION.`date +%Y%m%d`
 AM_MAINTAINER_MODE
 AC_PROG_CC
 
@@ -16,12 +17,14 @@ case $host_os in
         AC_CHECK_PROG(CSC, mcs, mcs)
         test -z "$CSC" && AC_MSG_ERROR([no C Sharp compiler: mcs not found in \$PATH])
         PKG_CONFIG_DIR='lib'
+        VERSION=$VERSION.`date +%Y%m%d`
     ;;
     darwin*)
         IFOLDER_OS='darwin'
         AC_CHECK_PROG(CSC, mcs, mcs)
         test -z "$CSC" && AC_MSG_ERROR([no C Sharp compiler: mcs not found in \$PATH])
         PKG_CONFIG_DIR='lib'
+        VERSION=$VERSION.`date +%Y%m%d`
     ;;
     cygwin*)
         IFOLDER_OS='windows'
@@ -29,6 +32,7 @@ case $host_os in
         test -z "$CSC" && AC_CHECK_PROG(CSC, mcs, mcs)
         test -z "$CSC" && AC_MSG_ERROR([no C Sharp compiler: neither csc nor mcs found in \$PATH])
         PKG_CONFIG_DIR='.'
+        VERSION=$VERSION.`date +%Y.%m%d`
     ;;
     *)
         AC_MSG_ERROR([Unknown host_os: $host_os])
