Fix the path to MyDns.cs to properly clean up
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@4596 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/Simias.dll/Makefile.am
+++ b/simias/src/Simias.dll/Makefile.am
@@ -70,7 +70,7 @@ uninstall-local:
 	cd $(DESTDIR)$(sysconfdir); rm -f Simias.log4net simias-client-bootstrap.config
 	cd $(DESTDIR)$(datadir)/simias; rm -f log4net.LICENSE.txt
 
-CLEAN_FILES = Simias.dll $(DOC_FILE_CLEAN) $(DEBUG_FILES) simias-client-bootstrap.config MyDns.cs
+CLEAN_FILES = Simias.dll $(DOC_FILE_CLEAN) $(DEBUG_FILES) ../Common/simias-client-bootstrap.config ../Common/MyDns.cs
 
 clean-local:
 	rm -rf $(CLEAN_FILES)
