--- a/ifolder/package/linux/ifolder.spec.in
+++ b/ifolder/package/linux/ifolder.spec.in
@@ -206,7 +206,7 @@ if [ "$INSTANCES_AFTER_UNINSTALL" = "0" ]; then
         then
                 rm -rf /root/.local/share/simias
         fi
-        rm -rf /home/${*}/.local/share/simias
+        rm -rf /home/*/.local/share/simias
                                                                                                                                   
     #
     # Remove ifolder.sh from /etc/profile.d
