1. Added new web methods to get shallow nodes for the Store Browser. This speeds up the display quite a bit.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@4617 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/tools/FormsStoreBrowser/FormsStoreBrowser.csproj
+++ b/simias/tools/FormsStoreBrowser/FormsStoreBrowser.csproj
@@ -148,6 +148,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "NodeBrowser2.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "PropertyEditor.cs"
                     SubType = "UserControl"
                     BuildAction = "Compile"
