Lots of updates.  Just checking this in so I'll be able to look at getting this to build in Windows eventually.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@4624 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/gaim-ifolder/gifolder/Makefile.mingw
+++ b/gaim-ifolder/gifolder/Makefile.mingw
@@ -73,7 +73,9 @@ C_SRC =		envC.c \
 			simias-messages.c \
 			simias-prefs.c \
 			simias-util.c \
-			buddy-profile.c
+			buddy-profile.c \
+			simias-users.c \
+			gtk-simias-users.c
 
 
 OBJECTS = $(C_SRC:%.c=%.o)
