Updated the Windows Makefile so that gdk_pixbuf-2.0 would be included.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@4629 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/gaim-ifolder/gifolder/Makefile.mingw
+++ b/gaim-ifolder/gifolder/Makefile.mingw
@@ -88,6 +88,7 @@ OBJECTS = $(C_SRC:%.c=%.o)
 LIBS =			-lgtk-win32-2.0 \
 			-lglib-2.0 \
 			-lgdk-win32-2.0 \
+			-lgdk_pixbuf-2.0 \
 			-lgmodule-2.0 \
 			-lgobject-2.0 \
 			-lws2_32 \
