defect#75485 remove roots simias store
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@4631 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/package/linux/ifolder.spec.in
+++ b/ifolder/package/linux/ifolder.spec.in
@@ -202,7 +202,7 @@ INSTANCES_AFTER_UNINSTALL=$1
 if [ "$INSTANCES_AFTER_UNINSTALL" = "0" ]; then
         #Remove the ~/.local/simias folder recursively for all users
         echo "Removing simias information for all users"
-        if [ -e /root/.local/simias ]
+        if [ -e /root/.local/share/simias ]
         then
                 rm -rf /root/.local/share/simias
         fi
